Make environment configurable using env vars

--- a/src/ui/index.html
+++ b/src/ui/index.html
@@ -96,6 +96,8 @@
     }
     document.body.classList.add(theme);
   </script>
+  <!-- Load environment variables -->
+  <script src="assets/env.js"></script>
   <div id="rootAlertContainer" style="display: none">
     <div class="d-flex flex-column alert alert-danger p-4 text-center"
       role="alert">
